[DeleteJob] Report final numbers after finishing

We only report progress periodically, so we might finish the job without
having reported the final numbers.

BUG: 421914